# LVGLPlayerNucU575

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  STM32U575xx_FLASH.ld  btstack  chocolate-doom
App/: 8bitdozero2.c  CMakeLists.txt  DoomPlayer.h  a2dp_player.h  app_a2dp_player.c  app_gui.c  app_gui.h  app_main.c  app_music.h  app_music_list.c  app_music_main.c  app_osc_music.c  app_setup.c  app_setup.h  app_shell.c  app_sound.c  app_sound.h  app_verify.c  app_verify.h  cover_if.c  doom_helper.c  doominfo.h  dualsense.c  dualshock4.c  dualshock4_report.h  fatfs.c  fatfs.h  fft.h  gamepad.c  gamepad.h  jpeg_if.c  jpeg_if.h  mix_player.c  rtosdef.h  sdl_helper.c  sdl_joystick.c  tjpgd.c  tjpgd.h
App/assets/: 8bitZero.ibin  README  conv.sh  ds4blue.ibin  img_lv_demo_music_btn_corner_large.c  img_lv_demo_music_btn_list_pause.c  img_lv_demo_music_btn_list_pause_large.c  img_lv_demo_music_btn_list_play.c  img_lv_demo_music_btn_list_play_large.c  img_lv_demo_music_btn_loop.c  img_lv_demo_music_btn_loop_large.c  img_lv_demo_music_btn_next.c  img_lv_demo_music_btn_next_large.c  img_lv_demo_music_btn_pause.c  img_lv_demo_music_btn_pause_large.c  img_lv_demo_music_btn_play.c  img_lv_demo_music_btn_play_large.c  img_lv_demo_music_btn_prev.c  img_lv_demo_music_btn_prev_large.c  img_lv_demo_music_btn_rnd.c  img_lv_demo_music_btn_rnd_large.c  img_lv_demo_music_corner_left.c  img_lv_demo_music_corner_left_large.c  img_lv_demo_music_corner_right.c  img_lv_demo_music_corner_right_large.c  img_lv_demo_music_cover_1.c  img_lv_demo_music_cover_1_large.c  img_lv_demo_music_cover_2.c  img_lv_demo_music_cover_2_large.c  img_lv_demo_music_cover_3.c  img_lv_demo_music_cover_3_large.c  img_lv_demo_music_icon_1.c  img_lv_demo_music_icon_1_large.c  img_lv_demo_music_icon_2.c  img_lv_demo_music_icon_2_large.c  img_lv_demo_music_icon_3.c  img_lv_demo_music_icon_3_large.c  img_lv_demo_music_icon_4.c  img_lv_demo_music_icon_4_large.c  img_lv_demo_music_list_border.c  (+8 more)
App/assets/output/: 8bitZero2.c  Action_Left.c  Action_Right.c  Arrow_Down.c  Arrow_Left.c  Arrow_Lower_Left.c  Arrow_Lower_Right.c  Arrow_Right.c  Arrow_Up.c  Arrow_Upper_Left.c  Arrow_Upper_Right.c  Button_Go.c  Button_Shutdown.c  Button_Stop.c  Map.c  bb.c  bluetooth_32.c  bluetooth_64.c  bluetooth_black.c  bluetooth_blue.c  bluetooth_scan.c  brightness.c  ds4blue2.c  dualsense2.c  imgtest.c  volume-control.c
BSP/: CMakeLists.txt  audio_output.h  board_if.c  board_if.h  bsp.h  bsp_audio.c  bsp_codec.c  bsp_driver_sd.c  bsp_driver_sd.h  bsp_lcd.c  bsp_main.c  bsp_qspi.c  bsp_touch.c  bsp_uart_dma.c  debug.h  ffconf.h  hal_uart_dma.h  lv_conf.h  lv_conf.h_old  qspi.h  sd_diskio.c  target.h
Core/Inc/: FreeRTOSConfig.h  app_freertos.h  main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
Core/Src/: app_freertos.c  main.c  main.c.bak  stm32u5xx_hal_msp.c  stm32u5xx_hal_timebase_tim.c  stm32u5xx_it.c
Drivers/STM32U5xx_HAL_Driver/Inc/: stm32u5xx_hal_dma2d.h  stm32u5xx_hal_hash.h  stm32u5xx_hal_i2c.h  stm32u5xx_hal_ospi.h  stm32u5xx_hal_sai.h  stm32u5xx_hal_uart.h  stm32u5xx_hal_usart.h
Icons/: conv.sh
RTT/: CMakeLists.txt
SDL/: SDL.h  SDL_joystick.h  SDL_keycode.h  SDL_mixer.h
SEGGER/: CMakeLists.txt  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Config_FreeRTOS.c
SEGGER/Config/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h
btstack-1.6/: CMakeLists.txt  CMakeLists.txt.bak  a2dp_sink_demo.c  btapi.c  btapi.h  btstack_audio_embedded.c  btstack_chipset_bcm.c  btstack_config.h  btstack_main.c  btstack_port.c  hal_audio.c  hal_flash_bank_memory.c  hci_if.h  hid_gamepad.c  player_a2dp_sink.c  player_hid_gamepad.c
btstack-1.6/platform/embedded/: hal_audio.h
btstack-1.6/platform/freertos/: btstack_uart_block_freertos.c
btstack-1.6/src/: btstack_memory.c
btstack-1.6/src/classic/: avrcp_controller.c
chocolate-doom-3.0.1/src/: config.h  d_iwad.c  d_loop.c  d_mode.c  i_endoom.c  i_joystick.c  i_sdlmusic.c  i_sdlsound.c  i_sound.c  i_video.c  m_config.c  m_misc.c  sha1.c  w_file_posix.c  w_main.c
chocolate-doom-3.0.1/src/doom/: d_main.c  dstrings.c  dstrings.h  g_game.c  info.c  info.h  m_menu.c  p_saveg.c
chocolate-doom-3.0.1/textscreen/fonts/: gentft.sh  tftfont.h  tftfont2.h
chocolate-doom-3.1.0/src/: CMakeLists.txt  d_iwad.c  d_loop.c  deh_main.c  i_endoom.c  i_input.c  i_input.h  i_joystick.c  i_joystick.h  i_main.c  i_musicpack.c  i_sdlmusic.c  i_sdlsound.c  i_sound.c  i_timer.c  i_video.c  m_argv.c  m_config.c  m_misc.c  w_file.c  w_file_posix.c  w_main.c
chocolate-doom-3.1.0/src/doom/: d_main.c  g_game.c  m_menu.c  p_saveg.c  p_saveg.h  s_sound.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
