set(BTSRCS
  player_a2dp_sink.c
  player_hid_gamepad.c
  btapi.c
  btstack_chipset_bcm.c
  btstack_main.c
  btstack_port.c
  btstack_audio_embedded.c
  btstack_tlv_flash_bank.c
  hal_audio.c
  hal_flash_bank_memory.c
  hci_dump_segger_rtt_stdout.c
  platform/freertos/btstack_run_loop_freertos.c
  platform/freertos/btstack_uart_block_freertos.c
  src/ad_parser.c
  src/btstack_crypto.c
  src/btstack_linked_list.c
  src/btstack_memory.c
  src/btstack_memory_pool.c
  src/btstack_tlv.c
  src/btstack_util.c
  src/btstack_resample.c
  src/btstack_audio.c
  src/btstack_ring_buffer.c
  src/hci.c
  src/hci_event.c
  src/hci_cmd.c
  src/hci_dump.c
  src/hci_transport_h4.c
  src/btstack_memory.c
  src/btstack_run_loop.c
  src/l2cap.c
  src/l2cap_signaling.c
  src/classic/a2dp.c
  src/classic/a2dp_sink.c
  src/classic/avdtp.c
  src/classic/avdtp_acceptor.c
  src/classic/avdtp_initiator.c
  src/classic/avdtp_sink.c
  src/classic/avdtp_util.c
  src/classic/btstack_sbc_decoder_bluedroid.c
  src/classic/btstack_sbc_plc.c
  src/classic/avrcp.c
  src/classic/avrcp_controller.c
  src/classic/avrcp_cover_art_client.c
  src/classic/goep_client.c
  src/classic/avrcp_target.c
  src/classic/btstack_link_key_db_tlv.c
  src/classic/device_id_server.c
  src/classic/goep_client.c
  src/classic/hid_host.c
  src/classic/obex_message_builder.c
  src/classic/obex_parser.c
  src/classic/rfcomm.c
  src/classic/sdp_client.c
  src/classic/sdp_server.c
  src/classic/sdp_util.c
  3rd-party/bluedroid/decoder/srce/alloc.c
  3rd-party/bluedroid/decoder/srce/bitalloc-sbc.c
  3rd-party/bluedroid/decoder/srce/bitalloc.c
  3rd-party/bluedroid/decoder/srce/bitstream-decode.c
  3rd-party/bluedroid/decoder/srce/decoder-sbc.c
  3rd-party/bluedroid/decoder/srce/decoder-private.c
  3rd-party/bluedroid/decoder/srce/framing.c
  3rd-party/bluedroid/decoder/srce/dequant.c
  3rd-party/bluedroid/decoder/srce/synthesis-8-generated.c
  3rd-party/bluedroid/decoder/srce/synthesis-sbc.c
  3rd-party/bluedroid/decoder/srce/synthesis-dct8.c
)

add_library(btstack STATIC ${BTSRCS})

